hphp/hack/test/typecheck/reactive/test_rx_enabled3.php.coeffects.exp
File "test_rx_enabled3.php", line 6, characters 3-9:
Reactive functions can only call other reactive functions. (Typing[4200])
  File "test_rx_enabled3.php", line 13, characters 10-14:
  This function is normal.
File "test_rx_enabled3.php", line 6, characters 3-9:
This call is not allowed because its coeffects are incompatible with the context (Typing[4390])
  File "test_rx_enabled3.php", line 5, characters 14-15:
  From this declaration, the context of this function body provides the capability set {Rx, WriteProperty}
  File "test_rx_enabled3.php", line 13, characters 10-14:
  But the function being called requires the default capability set {AccessStaticVariable, Output, WriteProperty}
  File "coeffect/contexts.hhi", line 28, characters 1-23:
  Contexts are defined here
